namespace CustomerLoyaltyPlatform.Core;

public enum BusinessStatus
{
    Active,
    Suspended,
    Closed
}
