namespace CustomerLoyaltyPlatform.Core;

public enum BusinessType
{
    Automotive,
    Retail,
    Services,
    FoodAndBeverage
}
